@@ -5,6 +5,8 @@ SIGNIFICANT USER-VISIBLE CHANGES
 
     o Make processMultipleSamples temporarily defunct because the 
       copynumber package was removed from Bioconductor
+    o Make it possible to specify saveRDS version to make output files
+      readable by old R versions prior to 3.6.0 (#255)  
 
 BUGFIXES
 
